@startuml LEGO Configurator ER Diagram

' ═══════════════════════════════════════════════
'  LEGO Robot Configurator — Database Schema
'  Auto-generated from SQLAlchemy models
' ═══════════════════════════════════════════════

skinparam linetype ortho
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 11

entity "users" as users {
  * **id** : VARCHAR(36) <<PK>>
  ---
  * username : VARCHAR(100) <<UNIQUE, INDEX>>
  * email : VARCHAR(255) <<UNIQUE, INDEX>>
  full_name : VARCHAR(255)
  * password_hash : VARCHAR(255)
  * created_at : TIMESTAMP WITH TZ
  updated_at : TIMESTAMP WITH TZ
}

entity "categories" as categories {
  * **id** : SERIAL <<PK>>
  ---
  * name : VARCHAR(100) <<UNIQUE, INDEX>>
  description : TEXT
}

entity "components" as components {
  * **id** : INTEGER <<PK>>
  ---
  * name : VARCHAR(255) <<INDEX>>
  * category : VARCHAR(100) <<INDEX>>
  category_id : INTEGER <<FK>>
  * price : FLOAT
  * weight : FLOAT
  image : VARCHAR(500)
  lego_number : VARCHAR(50)
  family : VARCHAR(100) <<INDEX>>
  domain : VARCHAR(50) <<INDEX>>
  system_type : VARCHAR(50)
  color : VARCHAR(50)
  material : VARCHAR(50)
  primary_role : VARCHAR(50)
  is_base : BOOLEAN
  assembly_group : VARCHAR(100)
  probability_weight : FLOAT
  --
  geometry : JSONB
  mechanical : JSONB
  electronics : JSONB
  constraints : JSONB
  compatibility : JSONB
  scores : JSONB
  inventory : JSONB
  meta : JSONB
  question_weights : JSONB
  phys_props : JSONB
  roles : JSONB
  domains : JSONB
  requires : JSONB
  excludes : JSONB
}

entity "component_connectors" as connectors {
  * **id** : SERIAL <<PK>>
  ---
  * component_id : INTEGER <<FK, INDEX>>
  connector_id : VARCHAR(100)
  type : VARCHAR(50) <<INDEX>>
  * count : INTEGER
  pattern : VARCHAR(50)
  grid_step_mm : FLOAT
  orientation : JSONB
  position : JSONB
  compatible_types : JSONB
  max_load_n : FLOAT
  is_primary_connection : BOOLEAN
}

entity "compatibility_rules" as compat {
  * **id** : SERIAL <<PK>>
  ---
  parent_component_id : INTEGER <<FK, INDEX>>
  child_component_id : INTEGER <<FK, INDEX>>
  parent_category : VARCHAR(100)
  child_category : VARCHAR(100)
  connection_type : VARCHAR(100)
  port_type : VARCHAR(100)
  * rule_type : VARCHAR(50)
  system_type : VARCHAR(50)
  description : TEXT
  * is_active : BOOLEAN
}

entity "configurations" as configs {
  * **id** : SERIAL <<PK>>
  ---
  user_id : VARCHAR(36) <<FK, INDEX>>
  name : VARCHAR(255)
  request_data : JSONB
  * total_price : FLOAT
  * total_weight : FLOAT
  * remaining_budget : FLOAT
  result_data : JSONB
  algorithm : VARCHAR(50)
  * created_at : TIMESTAMP WITH TZ
}

entity "configuration_parts" as parts {
  * **id** : SERIAL <<PK>>
  ---
  * configuration_id : INTEGER <<FK, INDEX>>
  * component_id : INTEGER <<FK, INDEX>>
  * quantity : INTEGER
}

' ═══════════════════════════════════════════════
'  RELATIONSHIPS
' ═══════════════════════════════════════════════

categories ||--o{ components : "has many"
components ||--o{ connectors : "has many"
components ||--o{ compat : "parent rules"
components ||--o{ compat : "child rules"
users ||--o{ configs : "owns"
configs ||--o{ parts : "contains"
components ||--o{ parts : "used in"

@enduml
